# vgbe

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
native/gbapu_wrapper/: gbapu_c_api.cpp  gbapu_c_api.h
src/: emulator.rs  instruction_logger.rs  lib.rs  tas.rs
src/apu/: dummy.rs  gbapu.rs  gbapu_ffi.rs  mod.rs
src/bus/: boot.rs  dma.rs  io.rs  memory_map.rs  mod.rs  timer.rs
src/cartridge/: header.rs  mbc.rs  mod.rs
src/cpu/: instructions.rs  interrupts.rs  mod.rs  registers.rs
src/frontend/: audio.rs  input.rs  mod.rs  renderer.rs  runner.rs  text.rs  window.rs
src/frontend/panels/: disassembly.rs  mod.rs
src/ppu/: background.rs  lifecycle.rs  mod.rs  oam.rs  registers.rs  sprites.rs  tile.rs  tilemap.rs  timing.rs
tests/: apu_test.rs  blargg_test.rs  emulator_test.rs  frontend_test.rs  games_test.rs  instruction_logger_test.rs  screen_drawing_test.rs  stat_interrupt_test.rs  tas_test.rs  timer_interrupt_test.rs
